syntax="proto3";                
package pb;                     
option go_package = '.';

message BroadCast{
    enum OperType{
        DEFAULT = 0;
        BROADCAST_GAME = 1;
        BROADCAST_ROOM = 2;
        BROADCAST_RANK = 3;
    };
    string source = 2;
    string Target = 3;
    bytes data = 4;
};


message HandShake{
    string s_host=1;
    string s_name=2;
    string curr_branch = 3;
    optional int32 s_group=4;
}

message Echo{
    string s_host=1;
    string s_name=2;
    optional int32 online=3;
}